# ChangeLog for dev-python/pyopencl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopencl/ChangeLog,v 1.23 2014/04/03 08:55:51 idella4 Exp $

*pyopencl-2013.2-r1 (03 Apr 2014)

  03 Apr 2014; Ian Delaney <idella4@gentoo.org> +pyopencl-2013.2-r1.ebuild:
  revbump; convert -> distutils-r1, add py3 support

*pyopencl-2013.2 (07 Nov 2013)

  07 Nov 2013; Patrick Lauer <patrick@gentoo.org> +pyopencl-2013.2.ebuild:
  Bump

*pyopencl-2013.1 (08 Jul 2013)

  08 Jul 2013; Patrick Lauer <patrick@gentoo.org> +pyopencl-2013.1.ebuild:
  Bump

  20 Jan 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due retirement, bug #35242

  08 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> -pyopencl-2011.2.ebuild:
  Remove old version depending on older boost.

*pyopencl-2012.1 (28 Jun 2012)

  28 Jun 2012; Patrick Lauer <patrick@gentoo.org> +pyopencl-2012.1.ebuild:
  Bump

  19 Apr 2012; Kacper Kowalik <xarthisius@gentoo.org> pyopencl-2011.2-r1.ebuild,
  pyopencl-9999.ebuild:
  Add missing dependency on dev-python/mako

  19 Apr 2012; Kacper Kowalik <xarthisius@gentoo.org> pyopencl-2011.2-r1.ebuild,
  pyopencl-9999.ebuild:
  Add missing dependency on dev-python/decorator

  13 Mar 2012; Mike Gilbert <floppym@gentoo.org> pyopencl-9999.ebuild:
  Synchronize ebuilds. Patch by Arfrever.

  06 Mar 2012; Jesus Rivero <neurogeek@gentoo.org> pyopencl-2011.2-r1.ebuild,
  pyopencl-9999.ebuild:
  Dropped boots-thread config line and fixed deps on virtual/opencl-0-r1 on
  both versions

  25 Feb 2012; Patrick Lauer <patrick@gentoo.org> pyopencl-2011.2-r1.ebuild,
  pyopencl-2011.2.ebuild, pyopencl-9999.ebuild:
  Fixing accidental double asterisk

  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> pyopencl-2011.2-r1.ebuild,
  pyopencl-2011.2.ebuild, pyopencl-9999.ebuild:
  Fixing pypy restricts to actually work

*pyopencl-2011.2-r1 (28 Jan 2012)
