@@ -8,15 +8,15 @@ DIST pyopencl-2013.2.tar.gz 1637274 SHA256 f8e4218e4e47d397886f5dabde16a4d8dcc12
 EBUILD pyopencl-2011.2-r1.ebuild 1410 SHA256 0f4b761cdb5dc3613b359c101666972b893aefb241a221e2c25d1c02da52808a SHA512 2754ab68e0951104f5b50dd8feff426ab180bef5b5dea76f67505a0cc5feba381733f68667adfa89666e83d70177483b7055c67a51eacf6b18df5d6ac79fbf5f WHIRLPOOL 7b339150cb5c346bf0bd74ab236b2bc40a2124a75332bd165e48fc34b5fe84b8ac3969e67c8cb00dfe94bcee55501e81c8e2b54cbcdbe11b00d2397dcc658c18
 EBUILD pyopencl-2012.1.ebuild 1404 SHA256 96fe7cd429357db12f92b9dfe0ea6f71ee86dc85f6f5aceca89c6bc979706f26 SHA512 a472f52ddc9ab213c283770d64028a91cae25187cf8e34e9c76344573e76acd9dff185b363dae432ed04a0c9d1f6d4342351134e199f97ab15b6febe5182e2b4 WHIRLPOOL cb1693549cebdf91c4f2853017949242ab08367430797638c9e4b407146c0ba4ba5829da92789007d2a25c7e82c1b3ce1ca6aac82b3c868e83b71c43c9be5fd1
 EBUILD pyopencl-2013.1.ebuild 1404 SHA256 4c05f715eb151d5cadafcba996d065374fbe77ce30b2de1c8241a27e005c2f11 SHA512 ba4d1b67b61a4db72c86b9895c1cee7f27bb23a7ad8f7933c6c1ed3ed1972de18be2d2a64c345a19669a13f4f7fc7579b871c52c6aa16e186d36e3a0257390a4 WHIRLPOOL 8abf566b6f9e9b44cd98d24bc6016b5a6c5049baba746839cd008db5cb0ed01b44362402e8bfd6a9c0e6d30e5ca9e2cb2ecec19885c64ecd5bd564d96116615e
-EBUILD pyopencl-2013.2-r1.ebuild 1291 SHA256 de59d59005692dc29869154e2dd4301a478de718bcd2f811ea9b848ba0afd00b SHA512 511195cad32fe52dfb43b724e655bbd7437c5dfc56b0f2c0c239bb80c5abef69062d94b3f092ce60771e26ee185b762f5f68b1b8b282f2fa0689ea309a1ecaa4 WHIRLPOOL e8bf23304667a93037e12fb96cbcc98d234bb1134d198aa6af413347ce9b4bfd8eee3126efc1ade1413fc7f782ec46a62ec14b886409a12726b8a1e3dac54a46
+EBUILD pyopencl-2013.2-r1.ebuild 1235 SHA256 6badda8856305e0d03b1690eeb0b0a00d20a4453e689e4649f2e939b1647bfe8 SHA512 4e28466f6e4ed0fb6dd960c962f62895b047b6c32abf631d8a27ec17a42d4ebf6fe018fee09af9d5f8dd541b1f1f46a695f24e1eb02eb7d4c38a0b9d8ba78be8 WHIRLPOOL ee99e396aa847dd2115a95a60ce8ae23f687d724613cfa54a2f440853784855a8f94dac9b5c931da52c12ae7dc96f155281bedc5472c89dc4b417e7809b1625c
 EBUILD pyopencl-2013.2.ebuild 1404 SHA256 00536dd4bdf0a1bbbd7187a8e5aa7e4b87b0f80e0dfe8dcc1dca7ff4866a40a7 SHA512 3061534096d390635680d2e6eebdfc3c22e0b372fc349bab281c0597f02d11ba596e99ef603e3edb0e03e5ee77320c28c31b42d6f29efd29db1ff0c004b601cf WHIRLPOOL d76e3921fb4b6ee32879fa8cf5c753be5c41a3ea5c6a4fded71197c4e8546e5e216a1f2f243ec633b340965bb14c9977dfba367a75ba726e09d5e40765351356
 EBUILD pyopencl-9999.ebuild 1423 SHA256 9ec8cd35c4ff1d6717ea294dbfcf81defc7c370bba282c5062581e54ef595e43 SHA512 f61aa90b106983e879cb783bbb191dd07274b075786543d98a9a2afe29494c59f45deced114296c80a766331efffa621642916be236e708a6864e1862ad73e14 WHIRLPOOL 126a79a99459298ae5887ad6b1a8acf201bd3ad75a9e4775f8608cc5d2f9b26ccd54a04b3f5b5efac54f912de0506eb4bd09aacbee3c2b2edb7bbc22c3a76b27
-MISC ChangeLog 3851 SHA256 aa73214dd0731a9fafad2cae72c2288a858ffb68d6f79ecf25ac5dccacd2cbcb SHA512 7ce8116ddaeda8e7fd45d80acd3a2fd413dfad10cc2631b4d7e28c63d531cc1fe7ea387616c0c4804e176024c471a896dd8461f251fb9ea7b81ec0d9a029994a WHIRLPOOL 102ca3d63fb6c897de8e9c49933ecacf26ecc410111feef914b57163c661c5f3e0b1e9d7bffd2b7ce6d78e0306d7446a7c836918257df7e2b99369ed7199e39a
+MISC ChangeLog 3961 SHA256 da01dfb6a12f31ce7132fb77896d2c26c69a1cccb7be11d0b6bb5e6de887eb30 SHA512 530c34b4529dfdd907321c8a7ea2c664048bf04890dff0cb94b6dd23e706f0a4fb9e82b57765e2e1450f2950d2b9a17588f5fbc02a4cac573d3034e7dbe9af12 WHIRLPOOL 5c50940c2bc0674a6681446b7cf58708a56ada140827689851f8be9c7d29f78c5d6a7ede7492a18515671caca4b7d919d6f43023208d76c01c649193d432bd6e
 MISC metadata.xml 231 SHA256 9e625a5886001fa0ce2de7d2f358cc2767fb50bc6f1583d98e81b60b96208e4d SHA512 a54b3c3c2d5927ee6fd342f88cad53adc5411fa9d36b2e8b5ee2a6f28cef12444fcce47cc8d0aee39ce9c928be33d2bc0742d0e6399589ac1e607139ca81e81e WHIRLPOOL f2136316d8399997b3299e9743c432eb853c436059dfe5b6321f8ff9522a877fda840aded940725c5dc5c7fb4112c0ae476caa2f5a8ee57da891386b4c0136f7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlM9IGgACgkQso7CE7gHKw1SXACfXRPed6khKHq2uQMcIvt1JsMo
-6nsAn1/J3wj7+LEi5om6MenNMO+4Ymma
-=C7VL
+iEYEAREIAAYFAlM+C38ACgkQso7CE7gHKw2CeQCbBe8v5r8Nagu5ZaNIXE5WQ575
+xkoAoJM5/vChN6dhfJcMW2wp9wWhCDS7
+=tBSc
 -----END PGP SIGNATURE-----
