@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopencl/pyopencl-2013.2-r1.ebuild,v 1.1 2014/04/03 08:55:51 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopencl/pyopencl-2013.2-r1.ebuild,v 1.2 2014/04/04 01:38:52 idella4 Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_7,3_2,3_3} )
@@ -36,10 +36,6 @@ src_configure()
 		--boost-python-libname=boost_python-${PYTHON_ABI}-mt \
 		--no-use-shipped-boost \
 		"${myconf[@]}"
-}
-
-python_compile_all() {
-	use doc && emake -C doc html
 }
 
 python_install_all() {
