@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyopencl
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopencl/ChangeLog,v 1.23 2014/04/03 08:55:51 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyopencl/ChangeLog,v 1.24 2014/04/04 01:38:52 idella4 Exp $
+
+  04 Apr 2014; Ian Delaney <idella4@gentoo.org> pyopencl-2013.2-r1.ebuild:
+  Rm doc build, fixes Bug #506688
 
 *pyopencl-2013.2-r1 (03 Apr 2014)
 
